[package]
name = "eoplus"
version = "1.0.0-RC1"
authors = ["Richard Leek <richard@richardleek.com>"]
description = "A lexer and parser for Endless Online EO+ scripts"
edition = "2021"
rust-version = "1.61.0"
license = "MIT"
repository = "https://github.com/sorokya/eoplus"
readme = "README.md"
exclude = [
    ".github",
]

[dependencies]
antlr-rust = "=0.3.0-beta"
